2006-09-06 Mateusz Loskot <mateusz@loskot.net>

	* source/operation/overlay/OverlayResultValidator.cpp,
	  source/operation/overlay/OffsetPointGenerator.cpp,
	  source/headers/geos/operation/overlay/OffsetPointGenerator.h,
	  source/headers/geos/operation/overlay/OverlayResultValidator.h:
	  Set svn:keyword property for $Id$ expansion.

2006-09-06 Sandro Santilli <strk@refractions.net>

	* source/operation/overlay/FuzzyPointLocator.cpp,
	  source/operation/overlay/OverlayResultValidator.cpp,
	  source/operation/overlay/OffsetPointGenerator.cpp,
	  source/operation/overlay/Makefile.am,
	  source/headers/geos/operation/overlay/OffsetPointGenerator.h,
	  source/headers/geos/operation/overlay/Makefile.am,
	  source/headers/geos/operation/overlay/FuzzyPointLocator.h,
	  source/headers/geos/operation/overlay/OverlayResultValidator.h:
	  Rest of Overlay validation classes.

2006-09-06 Mateusz Loskot <mateusz@loskot.net>

	* All files of following types: .c .cpp .h .i .in .inl
	.m .mk .py .vc: set svn:keyword property for $Id$ keyword
	expansion.

2006-09-06 Sandro Santilli <strk@refractions.net>

	* source/operation/overlay/FuzzyPointLocator.cpp,
	  source/headers/geos/operation/overlay/FuzzyPointLocator.h:
	  new helper class for Overlay op validation.

2006-09-05 Sandro Santilli <strk@refractions.net>

	* source/precision/GeometrySnapper.cpp,
	  source/headers/geos/precision/GeometrySnapper.h:
          Accept snapping tolerance as parameter, provide snap
	  tolerance computation function.
	* source/headers/geos/geom/BinaryOp.h: compute a smart
	  snap tolerance for given input when using snapping heuristic.
	* source/operation/overlay/OverlayOp.cpp (checkObviouslyWrongResult):
	  reworded exception messages

2006-07-26 Sandro Santilli <strk@refractions.net>

	* source/index/quadtree/Root.cpp (insertContained):
	  fixed bug in isZeroY computation - see
	  geos-devel/2006-August/002541.html

2006-08-03 Charlie Savage <cfis@savagexi.com>
